<resources>
    <string name="app_name">Driver Guide</string>
    <string name="Feed">Feed</string>
    <string name="Chat">Chat</string>
    <string name="Search">Search</string>
    <string name="Trips">Trips</string>
    <string name="Alerts">Alerts</string>
    <string name="More">More</string>
    <string name="Message">Message</string>
    <string name="Map">Map</string>
    <string name="TypeAMessage">Type A Message</string>
    <string name="SignOut">Sign Out</string>
</resources>
