<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_item1"
        android:icon="@drawable/ic_description_black_24dp"
        android:title="@string/Feed"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_item2"
        android:icon="@drawable/ic_trending_flat_black_24dp"
        android:title="@string/Trips"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_item3"
        android:icon="@drawable/ic_search_black"
        android:title="@string/Search"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_item4"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/Chat"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_item5"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/Alerts"
        app:showAsAction="ifRoom|withText"/>
</menu>